Add auth header to HTTP request

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(SRCS
     src/main.cpp
+    src/ProxyAuth.cpp
     src/ProxyFinder.cpp
     src/ProxyServer.cpp
 )
